# snek3

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  game-seed3.json  game-seed7.json  requirements.txt
.github/workflows/: api-image.yml  docker.yml  trainer-image.yml
archived/: export_model.py  pyproject.toml
archived/python/azsnek/: control.py  default_params.json  evaluate.py  net.py  obs_schema.py  recorder.py  runlog.py  search.py  symmetry.py  train.py
archived/python/dashboard/: __init__.py
archived/python/dashboard/static/assets/: index-B3QpEuXh.css
archived/python/snek/: __init__.pyi
archived/python/tests/: test_bindings.py  test_dashboard.py  test_symmetry.py  test_training.py
archived/snek-py/src/: lib.rs
checkpoints/: serving.json
crates/snek-burn/: Cargo.toml
crates/snek-burn/examples/: bench_burn.rs
crates/snek-burn/src/: lib.rs
crates/snek-core/: Cargo.toml
crates/snek-core/benches/: step.rs
crates/snek-core/src/: baseline.rs  body.rs  encode.rs  json.rs  lib.rs  setup.rs
crates/snek-core/tests/: rules.rs
crates/snek-heuristic/: Cargo.toml
crates/snek-heuristic/examples/: bench.rs
crates/snek-heuristic/src/: lib.rs
crates/snek-infer/: Cargo.toml
crates/snek-infer/examples/: bench_batches.rs  bench_pipeline.rs
crates/snek-infer/src/: lib.rs
crates/snek-py/: Cargo.toml
crates/snek-py/src/: lib.rs
crates/snek-search/: Cargo.toml
crates/snek-search/src/: le.rs  lib.rs  mcts.rs  search.rs  uct.rs
crates/snek-search/tests/: forest.rs
crates/snek-server/: Cargo.toml
crates/snek-server/src/: lib.rs  main.rs  net.rs  orchestrator.rs  recorder.rs  viewer.rs
crates/snek-server/viewer/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
crates/snek-server/viewer/src/: App.jsx  Board.jsx  MovePanel.jsx  TreeExplorer.jsx  api.js  styles.css
crates/snek-tch/: Cargo.toml  build.rs
crates/snek-tch/csrc/: graph_shim.cpp
crates/snek-tch/examples/: bench_tch.rs  dump_params.rs  graph.rs  sustain.rs
crates/snek-tch/src/: cudagraph.rs  lib.rs
crates/snek-train/: Cargo.toml  build.rs
crates/snek-train/proto/: snek.proto  viewer.proto
crates/snek-train/src/: bench.rs  carry.rs  config.rs  eval.rs  main.rs  metrics.rs  proto.rs  replay.rs  sample.rs  selfplay.rs  session.rs  state.rs  train.rs  trainer.rs
crates/snek-train/src/api/: mod.rs  viewer.rs
crates/snek-train/src/selfplay/: gpu.rs  materialize.rs  mod.rs  rules.rs  tree.rs  worker.rs
deploy/: DASHBOARD.md  Dockerfile  SERVING.md  VAST.md  entrypoint.sh  server-entrypoint.sh  server.Dockerfile  snek-server.service  tailscale-dashboard.sh  trainer-entrypoint.sh  trainer.Dockerfile
docs/: albatross-architecture.md  albatross-option-matrix.md  rust-rearchitecture-spec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: bench.ts  client.ts  eval.ts  events.ts  logs.ts  proto.ts  protobuf.ts  streams.ts
frontend/src/components/: Board.tsx  BoardCanvas.tsx  ConfigFields.tsx  ConfigPanel.tsx  EvalViewer.tsx  GameTile.tsx  GameViewer.tsx  GenerationChart.tsx  Header.tsx  LiveGames.tsx  LogPanel.tsx  MetricChart.tsx  RunCard.tsx  RunControls.tsx  SeriesChart.tsx  StatGrid.tsx  TrainingProgress.tsx
frontend/src/components/charts/: LineChart.tsx
frontend/src/components/run/: EloPanel.tsx  GamesPanels.tsx  LiveThroughput.tsx  LogsPanel.tsx  TopBar.tsx
frontend/src/hooks/: useEvalLive.ts  useLiveStats.ts  useLogs.ts  useRunDetail.ts  useRunList.ts  useTrainer.ts
frontend/src/lib/: configFields.ts  format.ts  moves.ts  palette.ts  phase.ts  players.ts
frontend/src/pages/: BenchView.tsx  RunView.tsx  RunsHome.tsx
python/azsnek/: __init__.py  autotune.py  control.py  default_params.json  evaluate.py  net.py  recorder.py  runlog.py  search.py  selfplay.py  train.py  train_albatross.py
python/dashboard/: app.py
python/dashboard/static/: index.html
python/dashboard/static/assets/: index-2jZgyQWR.js  index-3VrsC7rh.css  index-5ZZMOIvd.js  index-8IgM-Wpa.js  index-8VwgCInV.js  index-93G2kYJC.css  index-B4Pm6LDR.js  index-B7psdNij.js  index-BBsz2cDk.js  index-BCkAjAzW.js  index-BDVrijME.css  index-BJeCju3r.css  index-BSjIOk61.js  index-BU4cJVRz.css  index-BaBB5JmK.css  index-BaHO3uXW.js  index-BcbXSpX7.js  index-BdLw1JI5.js  index-Bg1HV-DI.js  index-BhOo8Am0.js  index-Blm7aXmU.js  index-BmsuJZnD.js  index-BohZVV_1.js  index-Bpf36Cl8.css  index-Bq5aRqtl.js  index-C-TI0yHT.js  index-C0RcF9rY.css  index-C1eUZsLe.js  index-C6LuYw6D.js  index-CKFbspc5.css  index-CPReK2IL.js  index-CQVOTz60.js  index-CTklKGet.css  index-CWkoeTQz.js  index-CYQbYvrI.js  index-ChpTsiJw.js  index-ChqSXKXe.js  index-CjRxaFwS.js  index-Crfz5WDe.css  index-Crzl0LuW.js  (+22 more)
python/dashboard/ui/: index.html  package-lock.json  package.json  vite.config.js
python/dashboard/ui/src/: App.jsx  ControlPanel.jsx  GameViewer.jsx  GenerationView.jsx  Home.jsx  MetricsChart.jsx  MiniBoard.jsx  ParamRows.jsx  api.js  board.js  paramInfo.js  styles.css
python/server/: main.py
python/snek/: __init__.py  __init__.pyi
python/tests/: test_autotune.py  test_bindings.py  test_dashboard.py  test_ffa.py  test_net_search.py  test_resume.py  test_selfplay_state.py  test_server.py  test_training.py
scripts/: adaptive_train.sh  audit.sh  export_model.py  h100.sh  overnight_train.sh
