[workspace]
resolver = "2"
members = [
    "crates/snek-core",
    "crates/snek-search",
    # "crates/snek-py" is added in Phase 2 once maturin/PyO3 are set up; it
    # requires Python linkage that would otherwise break plain `cargo test`.
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["brensch"]

[workspace.dependencies]
snek-core = { path = "crates/snek-core" }
snek-search = { path = "crates/snek-search" }
arrayvec = "0.7"
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
