[workspace]

# Standalone (not a workspace member): burn + cubecl/CUDA pull a large dep tree,
# like snek-infer's ort. Built/benched on its own.
[package]
name = "snek-burn"
version = "0.1.0"
edition = "2021"

[dependencies]
# default-features = false drops burn-cuda's `fusion` (which recompiles a fused
# kernel per forward -> ~100ms/call here). Raw CubeBackend uses cached per-op
# kernels.
burn = { version = "0.21", default-features = false, features = ["std", "cuda"] }
rand = "0.8"

[profile.release]
opt-level = 3
