# Pure-Rust flood-fill baseline agent: no libtorch, safe to build anywhere.
[package]
name = "snek-heuristic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
snek-core = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_xoshiro = { workspace = true }
