[workspace]

[package]
name = "snek-infer"
version = "0.1.0"
edition = "2021"

# NOTE: not a workspace member (depends on ort/onnxruntime); built only as part
# of snek-py and the API binary, like snek-py itself.

[dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "cuda", "ndarray"] }
ndarray = "0.16"
rand = "0.8"

[profile.release]
opt-level = 3
