# Detached from the parent cargo workspace (own `[workspace]` table) so that a
# plain `cargo test` at the repo root does not try to build this Python
# extension module (which needs Python linkage). maturin builds it directly via
# its manifest-path.
[workspace]

[package]
name = "snek-py"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["brensch"]

[lib]
name = "snek"
crate-type = ["cdylib"]

[dependencies]
snek-core = { path = "../snek-core", features = ["json"] }
snek-search = { path = "../snek-search" }
snek-infer = { path = "../snek-infer" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1.10"
rand = "0.8"
rand_xoshiro = "0.6"
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
