# Detached from the parent cargo workspace (own `[workspace]` table), like
# snek-py and snek-infer, because it links onnxruntime via `snek-infer`/`ort`
# and we don't want a plain `cargo test` at the repo root to pull that in.
[workspace]

[package]
name = "snek-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["brensch"]

[lib]
name = "snek_server"
path = "src/lib.rs"

[[bin]]
name = "snek-server"
path = "src/main.rs"

[dependencies]
snek-core = { path = "../snek-core", features = ["json"] }
snek-search = { path = "../snek-search" }
snek-infer = { path = "../snek-infer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
tiny_http = "0.12"
rand = "0.8"
rand_xoshiro = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
