# Detached from the parent cargo workspace because it links libtorch through
# `tch`; plain root `cargo test` should not require CUDA/libtorch loader setup.
[workspace]

[package]
name = "snek-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["brensch"]

[lib]
name = "snek_server"
path = "src/lib.rs"

[[bin]]
name = "snek-server"
path = "src/main.rs"

[[bin]]
name = "arena"
path = "src/bin/arena.rs"

[dependencies]
snek-core = { path = "../snek-core", features = ["json"] }
snek-search = { path = "../snek-search" }
snek-tch = { path = "../snek-tch" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
tiny_http = "0.12"
rand = "0.8"
rand_xoshiro = "0.6"
rust-embed = "8"
sha2 = "0.10"
tch = "0.24"
core_affinity = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
