[workspace]

[package]
name = "snek-train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrayvec = "0.7"
async-stream = "0.3"
axum = "0.7"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
prost = "0.13"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snek-core = { path = "../snek-core" }
snek-tch = { path = "../snek-tch" }
tch = "0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
